Try docker in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,19 @@
 
-os: linux
-dist: bionic
+jobs:
+  include:
+  - language: bash
+    os: linux
+    dist: trusty
+    services: docker
+    script:
+    - docker run -v $PWD:/src -w /src crystallang/crystal:0.31.1 crystal spec
+  - language: bash
+    os: linux
+    dist: trusty
+    services: docker
+    script:
+    - docker run -v $PWD:/src -w /src crystallang/crystal:1.0.0 crystal spec
 
-language: crystal
 
   #crystal:
   #- latest
