--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,14 @@ script:
 before_deploy: docker run -v $PWD:/src -w /src crystallang/crystal:$CRVER crystal docs
 
 deploy:
-  provider: pages
+  provider: pages:git
   cleanup: false
   token: $GITHUB_TOKEN
   keep_history: true
   local_dir: docs
   target_branch: gh-pages
+  verbose: true
   on:
     branch: finalise
+    condition: $CRVER = latest
 
