--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ script:
 - docker run -v $PWD:/src -w /src crystallang/crystal:$CRVER crystal version
 - docker run -v $PWD:/src -w /src crystallang/crystal:$CRVER shards install
 - docker run -v $PWD:/src -w /src crystallang/crystal:$CRVER crystal spec
+- test "$CRVER" = "latest" && ( rm -fr docs ; docker run -v $PWD:/src -w /src crystallang/crystal:$CRVER crystal docs )
 
-before_deploy: docker run -v $PWD:/src -w /src crystallang/crystal:$CRVER crystal docs
 
 deploy:
   provider: pages:git
