Squashed commit of the following:
commit 6ef33bb8cfe58fc55e83078796b8e32ca5902151
Author: Darryl <darryl@snakegully.au>
Date:   Thu Jun 10 00:06:57 2021 +1000

    Convert travis file to use make

commit cc73bf38b41f1858fa4baa0deda2cd1b27cd8887
Author: Darryl <darryl@snakegully.au>
Date:   Thu Jun 10 00:05:31 2021 +1000

    Add ameba static analysis

commit cf01d984a10d73f31f675d0f2a84ae499ae92209
Author: Darryl <darryl@snakegully.au>
Date:   Wed Jun 9 23:43:07 2021 +1000

    try codacy

--- a/shard.yml
+++ b/shard.yml
@@ -19,3 +19,8 @@ dependencies:
   crest:
     github: mamantoha/crest
 
+development_dependencies:
+  ameba:
+    github: crystal-ameba/ameba
+    version: ~> 0.13.0
+
