Revert "Squashed commit of the following:"
This reverts commit 8c1814276dce46a6123a254427bef4b55fc6fa08.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
 script:
 - docker run -v $PWD:/src -w /src crystallang/crystal:$CRVER crystal version
 - docker run -v $PWD:/src -w /src crystallang/crystal:$CRVER shards install
-- docker run -v $PWD:/src -w /src crystallang/crystal:$CRVER make check
+- docker run -v $PWD:/src -w /src crystallang/crystal:$CRVER crystal spec
 - test "$CRVER" = "latest" && ( rm -fr docs ; docker run -v $PWD:/src -w /src crystallang/crystal:$CRVER crystal docs ) ; true
 
 
