--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
 script:
 - docker run -v $PWD:/src -w /src crystallang/crystal:$CRVER shards install
 - docker run -v $PWD:/src -e BARITE_TEST_BUCKET=$BARITE_TEST_BUCKET -e BARITE_TEST_KEY_ID=$BARITE_TEST_KEY_ID -e BARITE_TEST_KEY=$BARITE_TEST_KEY -w /src crystallang/crystal:$CRVER make check
-- test "$CRVER" = "latest" && ( rm -fr docs ; docker run -v $PWD:/src -w /src crystallang/crystal:$CRVER crystal docs ) ; true
+- test "$CRVER" = "latest" && ( rm -fr docs ; docker run -v $PWD:/src -w /src crystallang/crystal:$CRVER crystal docs ; ls -l docs ) ; true
 
 
 deploy:
